Bug 1738744 [wpt PR 31445] - Update wpt metadata, a=testonly
wpt-pr: 31445
wpt-type: metadata

UltraBlame original commit: cf431ce8be3d8e0862145c3cfd0eaa5bc53e6034

--- a/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html.ini
@@ -25,3 +25,9 @@
 
   [Ensure that controller code is applied when slot and part attributes are different]
     expected: FAIL
+
+  [HTMLOptionElements (and not other element types) should receive option controller code]
+    expected: FAIL
+
+  [To receive option part controller code, an option must be a descendant of the listbox part in a flat tree traversal]
+    expected: FAIL
