--- a/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-value.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-selectmenu-element/selectmenu-value.tentative.html.ini
@@ -20,3 +20,5 @@
   [Test that option parts in a slotted-in listbox are reflected in the value property]
     expected: FAIL
 
+  [Test value with non-HTMLOptionElement elements labeled as parts]
+    expected: FAIL
