--- a/dom/security/test/mixedcontentblocker/mochitest.ini
+++ b/dom/security/test/mixedcontentblocker/mochitest.ini
@@ -21,6 +21,8 @@ support-files =
   file_redirect.html
   file_redirect_handler.sjs
   file_bug1551886.html
+  file_bug1474842.html
+  file_bug1474842.js
 
 [test_main.html]
 skip-if =
@@ -33,3 +35,5 @@ skip-if =
     webrender  # Bug 1424752
 [test_redirect.html]
 [test_bug1551886.html]
+[test_bug1474842.html]
+scheme = https
