Bug 1735551 - [devtools] Turn WalkerFront#findNodeFront into a command. r=ochameau.
The callsites are migrated to the new command, except from the webconsole test
in which we replace usage with existing inspector test helper.

Differential Revision: https://phabricator.services.mozilla.com/D128712

UltraBlame original commit: d046e576646aeecd8990f2ff63b58e404fc4e746

--- a/devtools/shared/commands/inspector/tests/browser.ini
+++ b/devtools/shared/commands/inspector/tests/browser.ini
@@ -7,5 +7,6 @@ support-files =
   !/devtools/client/shared/test/highlighter-test-actor.js
   head.js
 
+[browser_inspector_command_findNodeFrontFromSelectors.js]
 [browser_inspector_command_getSuggestionsForQuery.js]
 [browser_inspector_command_search.js]
