Bug 1333264 - Do not use a local variable to keep the reference of the timer. r=sfoster
If the reference of the timer is released, the timer event won't be fired.

Differential Revision: https://phabricator.services.mozilla.com/D130189

UltraBlame original commit: 7abb5b788b2affb5a2ee0a58361fd9788c71907d

--- a/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
+++ b/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
@@ -193,8 +193,7 @@ skip-if = toolkit == 'android' # password generation
 [test_master_password.html]
 scheme = https
 skip-if =
-  os != 'mac' || verify || xorigin # Tests desktop prompts and bug 1333264
-  os == "mac" # Bug 1333264
+  fission && xorigin  # Bug 1716412 - New fission platform triage
 support-files =
   chrome_timeout.js
   subtst_master_pass.html
