Backed out changeset 7abb5b788b2a (bug 1333264) for causing mochitest failures on test_master_password.html CLOSED TREE
UltraBlame original commit: 50e4a4e6975a7f828277a2b9c3cc9770a6c94107

--- a/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
+++ b/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
@@ -193,7 +193,8 @@ skip-if = toolkit == 'android' # password generation
 [test_master_password.html]
 scheme = https
 skip-if =
-  fission && xorigin  # Bug 1716412 - New fission platform triage
+  os != 'mac' || verify || xorigin # Tests desktop prompts and bug 1333264
+  os == "mac" # Bug 1333264
 support-files =
   chrome_timeout.js
   subtst_master_pass.html
