--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -185,7 +185,10 @@ mochitest-browser-chrome:
                     linux.*64-devedition-qr/opt: built-projects
                     windows10-64-2004-qr/debug: built-projects
                     default: []
-            webrender-sw-a11y-checks: []  # run-on-projects defined in variant config
+            webrender-sw-a11y-checks:
+                by-test-platform:
+                    linux.*64(-shippable)?-qr/opt: ['trunk']
+                    default: []
             webrender-sw-fission:
                 by-test-platform:
                     linux.*64(-asan|-shippable)?-qr/(opt|debug): ['trunk']
@@ -396,7 +399,7 @@ mochitest-devtools-chrome:
         by-variant:
             a11y-checks:
                 by-test-platform:
-                    linux.*64(-shippable)?-qr/opt: built-projects
+                    linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
             fission:
                 by-test-platform:
