Bug 1739312 - Use test_runner in test-verify. r=gbrown
This was missed in Bug 1529082.

Differential Revision: https://phabricator.services.mozilla.com/D130366

UltraBlame original commit: d36e6455280a611c74abfd3f5de72de1698c6710

--- a/taskcluster/ci/test/misc.yml
+++ b/taskcluster/ci/test/misc.yml
@@ -86,7 +86,7 @@ test-verify:
     built-projects-only: true
     target:
         by-test-platform:
-            android-em-7.*: geckoview-androidTest.apk
+            android-em-7.*: geckoview-test_runner.apk
             default: null
     optimization:
         test-verify: ["test-verify"]
