Bug 1737405 - Disable wasm caching for release/beta. r=lth
Differential Revision: https://phabricator.services.mozilla.com/D130403

UltraBlame original commit: ddba013c8f707246b407fdd69afc45966960f263

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6168,7 +6168,7 @@
 
 - name: javascript.options.wasm_caching
   type: bool
-  value: true
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 # The amount of time we wait between a request to GC (due to leaving a page) and doing the actual GC, in ms.
