Backed out 9 changesets (bug 1737673) for breaking local Windows builds (bug 1739520).
Backed out changeset b7ad64578b84 (bug 1737673)
Backed out changeset 6b374ffe6878 (bug 1737673)
Backed out changeset 070efa174493 (bug 1737673)
Backed out changeset 44bf02d34aaf (bug 1737673)
Backed out changeset 7147d8490b9c (bug 1737673)
Backed out changeset e1d2518592d4 (bug 1737673)
Backed out changeset 18eec84f404b (bug 1737673)
Backed out changeset e38b571d248d (bug 1737673)
Backed out changeset 98a659f60686 (bug 1737673)

UltraBlame original commit: 47f2f2add0cae4cb58825876f635b39d4dfc4839

--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -185,10 +185,7 @@ mochitest-browser-chrome:
                     linux.*64-devedition-qr/opt: built-projects
                     windows10-64-2004-qr/debug: built-projects
                     default: []
-            webrender-sw-a11y-checks:
-                by-test-platform:
-                    linux.*64(-shippable)?-qr/opt: ['trunk']
-                    default: []
+            webrender-sw-a11y-checks: []  # run-on-projects defined in variant config
             webrender-sw-fission:
                 by-test-platform:
                     linux.*64(-asan|-shippable)?-qr/(opt|debug): ['trunk']
@@ -399,7 +396,7 @@ mochitest-devtools-chrome:
         by-variant:
             a11y-checks:
                 by-test-platform:
-                    linux.*64(-shippable)?-qr/opt: ['trunk']
+                    linux.*64(-shippable)?-qr/opt: built-projects
                     default: []
             fission:
                 by-test-platform:
