Bug 1131996 - Part 3: Support out-of-bounds read access on arguments objects in Warp. r=iain
Transpile the CacheIR operation from part 2.

Differential Revision: https://phabricator.services.mozilla.com/D129621

UltraBlame original commit: cdc0ba4d147b4d3b248d05fd4fb82baf70f2f186

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -1799,7 +1799,7 @@
 
 - name: LoadArgumentsObjectArgHoleResult
   shared: true
-  transpile: false
+  transpile: true
   cost_estimate: 2
   args:
     obj: ObjId
