Bug 1131996 - Part 4: Support scalar replacement for arguments objects with out-of-bounds read access. r=iain
The follows the existing implementations of `MGetInlinedArgument` and
`MGetFrameArgument`. There are only two differences:
1. A bailout occurs when the index is negative. This implies both instructions
   must be guards.
2. Undefined is returned when the index is larger than the arguments length.

Differential Revision: https://phabricator.services.mozilla.com/D129622

UltraBlame original commit: f7cb0f16640254f970cec6db9fdc1c4b2e903513

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -390,6 +390,9 @@
 - name: GetInlinedArgument
   gen_boilerplate: false
 
+- name: GetInlinedArgumentHole
+  gen_boilerplate: false
+
 # Get argument from arguments object.
 - name: GetArgumentsObjectArg
   result_type: BoxedValue
@@ -2094,6 +2097,16 @@
   result_type: BoxedValue
   operands:
     index: WordSized
+
+# Load a value from the actual arguments.
+# Returns undefined if |index| is larger-or-equals to |length|. Bails out if
+# |index| is negative.
+- name: GetFrameArgumentHole
+  result_type: BoxedValue
+  operands:
+    index: WordSized
+    length: WordSized
+  num_temps: 1
 
 # Create the rest parameter.
 - name: Rest
