--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -1666,7 +1666,7 @@
   custom_writer: true
   args:
     functionObject: ObjectField
-    templateObject: ObjectField
+    thisShape: ShapeField
 
 - name: LoadFixedSlotResult
   shared: false
