Bug 1738721 - Part 3: Rename MetaTwoByte to MetaScriptedThisShape and remove unused argument r=jandem
Differential Revision: https://phabricator.services.mozilla.com/D130106

UltraBlame original commit: b151318ead18b7c6f1ecc5051b8b8b3b250088cd

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -1659,13 +1659,12 @@
 
 
 # Meta ops generate no code, but contain data for BaselineInspector.
-- name: MetaTwoByte
+- name: MetaScriptedThisShape
   shared: true
   transpile: true
   cost_estimate: 0
   custom_writer: true
   args:
-    functionObject: ObjectField
     thisShape: ShapeField
 
 - name: LoadFixedSlotResult
