Bug 1732736 - Enable window occlusion on Nightly on Windows r=jrmuizel,gfx-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D127366

UltraBlame original commit: 79acac71ec88b977389f57f6eb08c64499e02dbf

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12144,7 +12144,7 @@
 
 - name: widget.windows.window_occlusion_tracking.enabled
   type: bool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 - name: widget.windows.window_occlusion_tracking_display_state.enabled
