--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -2239,13 +2239,13 @@ intl.ui.browserLanguage:
       installId: The id for an install.
     products:
       - firefox
-    expiry_version: "97"
+    expiry_version: "109"
     notification_emails:
       - flod@mozilla.com
       - mstriemer@mozilla.com
     release_channel_collection: opt-out
     record_in_processes: ["main"]
-    bug_numbers: [1486507, 1553311, 1607501, 1672571]
+    bug_numbers: [1486507, 1553311, 1607501, 1672571, 1739288]
 
 network.dns:
   trrConfirmation:
