Bug 1739610 - Part 3: Make MSuperFunction movable. r=jandem
`MSuperFunction` can be moved, it has similar semantics as the already movable
`MObjectStaticProto` instruction.

Depends on D130463

Differential Revision: https://phabricator.services.mozilla.com/D130464

UltraBlame original commit: 209297ab2c2fe9ac437cce77b626aaca3579f03f

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -2131,6 +2131,8 @@
   operands: 
     callee: Object
   result_type: Value
+  movable: true
+  congruent_to: if_operands_equal
   alias_set: custom
 
 - name: InitHomeObject
