--- a/testing/web-platform/meta/app-history/navigate/return-value/goTo-cross-document-preventDefault.html.ini
+++ b/testing/web-platform/meta/app-history/navigate/return-value/goTo-cross-document-preventDefault.html.ini
@@ -1,3 +1,6 @@
 [goTo-cross-document-preventDefault.html]
   [goTo() promise rejection when preventDefault()ing the navigate event (cross-document)]
     expected: FAIL
+
+  [goTo() promise never settle when preventDefault()ing the navigate event (cross-document)]
+    expected: FAIL
