Bug 1739292 [wpt PR 31495] - Update wpt metadata, a=testonly
wpt-pr: 31495
wpt-type: metadata

UltraBlame original commit: 5d375fcf273e64af4f05597ca4f67d79c75063f9

--- a/testing/web-platform/meta/notifications/lang.https.html.ini
+++ b/testing/web-platform/meta/notifications/lang.https.html.ini
@@ -1,4 +1,4 @@
-[lang.html]
+[lang.https.html]
   [Roundtripping lang "". Expecting "".]
     expected: NOTRUN
 
@@ -109,4 +109,3 @@
 
   [Roundtripping lang "foöÉbÁr". Expecting "".]
     expected: NOTRUN
-
