--- a/testing/web-platform/meta/notifications/constructor-basic.https.html.ini
+++ b/testing/web-platform/meta/notifications/constructor-basic.https.html.ini
@@ -1,4 +1,3 @@
-[constructor-basic.html]
+[constructor-basic.https.html]
   [Called the notification constructor with one argument.]
     expected: NOTRUN
-
