--- a/testing/web-platform/meta/notifications/constructor-invalid.https.html.ini
+++ b/testing/web-platform/meta/notifications/constructor-invalid.https.html.ini
@@ -1,4 +1,3 @@
-[constructor-invalid.html]
+[constructor-invalid.https.html]
   [Called the notification constructor with no arguments.]
     expected: NOTRUN
-
