Bug 1739544 [wpt PR 31513] - Update wpt metadata, a=testonly
wpt-pr: 31513
wpt-type: metadata

UltraBlame original commit: 770fa41323c20ab79ac5ffefe3d1498c9e18b342

--- a/testing/web-platform/meta/webmessaging/broadcastchannel/workers.html.ini
+++ b/testing/web-platform/meta/webmessaging/broadcastchannel/workers.html.ini
@@ -1,4 +1,4 @@
-[workers.tentative.html]
+[workers.html]
   [BroadcastChannel messages from closed worker to parent should be ignored (BC created before closing)]
     expected: FAIL
 
