--- a/testing/web-platform/meta/webmessaging/broadcastchannel/detached-iframe.html.ini
+++ b/testing/web-platform/meta/webmessaging/broadcastchannel/detached-iframe.html.ini
@@ -1,4 +1,4 @@
-[detached-iframe.tentative.html]
+[detached-iframe.html]
   [BroadcastChannel messages from detached iframe to parent should be ignored (BC created before detaching)]
     expected: FAIL
 
