--- a/testing/web-platform/meta/web-locks/non-fully-active.tentative.https.html.ini
+++ b/testing/web-platform/meta/web-locks/non-fully-active.tentative.https.html.ini
@@ -1,3 +1,5 @@
 [non-fully-active.tentative.https.html]
   [request()'s fully-active check happens earlier than name validation]
-    expected: FAIL
+    expected:
+      if os == "android": PASS
+      FAIL
