--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6904,6 +6904,20 @@
   mirror: always
   rust: true
 
+# Whether the `:-moz-lwtheme` pseudo-class is exposed to content.
+- name: layout.css.moz-lwtheme.content.enabled
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+  rust: true
+
+# Whether the `:-moz-locale-dir()` pseudo-class is exposed to content.
+- name: layout.css.moz-locale-dir.content.enabled
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+  rust: true
+
 # Whether the `-moz-control-character-visibility` property is exposed to
 # content.
 #
