Bug 1666557 - Make TRR NAT64 prefixing work with socket process, r=necko-reviewers,dragana
Differential Revision: https://phabricator.services.mozilla.com/D130686

UltraBlame original commit: 8000eadc16ec30de08895a31f7ca431bc3ac4ccc

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -26,7 +26,6 @@ support-files =
   trr_common.js
 
 [test_trr_nat64.js]
-skip-if = socketprocess_networking
 run-sequentially = node server exceptions dont replay well
 [test_nsIBufferedOutputStream_writeFrom_block.js]
 [test_cache2-00-service-get.js]
@@ -550,9 +549,7 @@ run-sequentially = node server exceptions dont replay well
 run-sequentially = node server exceptions dont replay well
 [test_http_server_timing.js]
 [test_dns_retry.js]
-skip-if =
-  os == 'mac'
-  socketprocess_networking # server on a local ipv6 is not started on mac
+skip-if = os == 'mac' # server on a local ipv6 is not started on mac
 run-sequentially = node server exceptions dont replay well
 [test_http3_version1.js]
 skip-if =
