Bug 1739539 - Rename titlebar pref and add migration from old pref. r=mconley
Something like this ought to do?

Differential Revision: https://phabricator.services.mozilla.com/D130858

UltraBlame original commit: 9fdfec4d93d33618812ec19292fe52609589b26e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1326,7 +1326,7 @@
 # Whether we should draw the tabs on top of the titlebar.
 #
 # no (0), yes (1), or default (2), which is true everywhere except Linux.
-- name: browser.tabs.drawInTitlebar
+- name: browser.tabs.inTitlebar
   type: int32_t
   value: 2
   mirror: always
