--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -1,3 +1,4 @@
+
 [DEFAULT]
 head = head_channels.js head_cache.js head_cache2.js head_cookies.js head_trr.js head_http3.js
 support-files =
@@ -596,6 +597,7 @@ skip-if =
 run-sequentially = node server exceptions dont replay well
 [test_bug1725766.js]
 skip-if = os == "android" # skip because of bug 1589327
+[test_trr_af_fallback.js]
 [test_https_rr_ech_prefs.js]
 skip-if = os == "android"
 run-sequentially = node server exceptions dont replay well
