--- a/dom/serviceworkers/test/mochitest.ini
+++ b/dom/serviceworkers/test/mochitest.ini
@@ -8,4 +8,22 @@ prefs =
   network.cookie.cookieBehavior=0
 dupe-manifest = true
 
+# Following tests are not working currently when dFPI is enabled. So, we put
+# these tests here instead of mochitest-common.ini so that these tests won't run
+# when dFPI is enabled.
+[test_cookie_fetch.html]
+[test_csp_upgrade-insecure_intercept.html]
+[test_eventsource_intercept.html]
+[test_https_fetch.html]
+[test_https_fetch_cloned_response.html]
+[test_https_origin_after_redirect.html]
+[test_https_origin_after_redirect_cached.html]
+[test_https_synth_fetch_from_cached_sw.html]
+[test_importscript_mixedcontent.html]
+tags = mcb
+[test_openWindow.html]
+skip-if = toolkit == 'android' && !is_fennec # Bug 1620052
+tags = openwindow
+[test_sanitize_domain.html]
+
 [include:mochitest-common.ini]
