--- a/dom/serviceworkers/test/mochitest-dFPI.ini
+++ b/dom/serviceworkers/test/mochitest-dFPI.ini
@@ -3,6 +3,9 @@
 prefs =
   network.cookie.cookieBehavior=5
 tags = serviceworker-dfpi
+# We disable service workers for third-party contexts when dFPI is enabled. So,
+# we disable xorigin tests for dFPI.
+skip-if = xorigin
 dupe-manifest = true
 
 [include:mochitest-common.ini]
