--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -576,7 +576,7 @@ workers:
             implementation: generic-worker
             os: windows
             worker-type: 'gecko-{alias}'
-        win10-64-2004(|-gpu|-ssd|-source):
+        win10-64-2004(|-gpu|-ssd|-source|-ssd-gpu):
             provisioner: 'gecko-t'
             implementation: generic-worker
             os: windows
