Bug 1706346 part 1 - [css-lists] Style system changes to support 'reversed(<counter-name>)'.  r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D129955

UltraBlame original commit: b397e2d17854dda24f418926c135a03a902538f6

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -557,7 +557,8 @@ cbindgen-types = [
     { gecko = "StyleVariantAlternatesList", servo = "crate::values::specified::font::VariantAlternatesList" },
     { gecko = "StyleSVGPaintOrder", servo = "crate::values::specified::svg::SVGPaintOrder" },
     { gecko = "StyleClipRectOrAuto", servo = "crate::values::computed::ClipRectOrAuto" },
-    { gecko = "StyleCounterSetOrReset", servo = "crate::values::computed::CounterSetOrReset" },
+    { gecko = "StyleCounterReset", servo = "crate::values::computed::CounterReset" },
+    { gecko = "StyleCounterSet", servo = "crate::values::computed::CounterSet" },
     { gecko = "StyleCounterIncrement", servo = "crate::values::computed::CounterIncrement" },
     { gecko = "StyleContent", servo = "crate::values::computed::counters::Content" },
     { gecko = "StyleSymbolsType", servo = "crate::values::generics::SymbolsType" },
