Bug 1737131 - Enable more async stacks in webextension tests. r=extension-reviewers,zombie
This made debugging this a bit more tractable.

Differential Revision: https://phabricator.services.mozilla.com/D131076

UltraBlame original commit: cb78ad278d0eb29b162a1bc9796341663b52c67a

--- a/browser/components/extensions/test/browser/browser.ini
+++ b/browser/components/extensions/test/browser/browser.ini
@@ -7,6 +7,7 @@ prefs =
     dom.animations-api.core.enabled=true
     dom.animations-api.timelines.enabled=true
     plugin.load_flash_only=false
+    javascript.options.asyncstack_capture_debuggee_only=false
 support-files =
   head.js
   head_devtools.js
