Bug 1719427: Move scrollbar size information from prefs to C++ and allow sizing to be overridden via prefs. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D130671

UltraBlame original commit: 4df7017f6bc9bc95701eedd45a531255444ecce7

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12008,16 +12008,11 @@
   value: 0
   mirror: always
 
-# The size in CSS pixels at full zoom of the minimum scrollbar width.
-- name: widget.non-native-theme.scrollbar.size
+# An override that allows to override the default platform size. The size in CSS
+# pixels at full zoom of the minimum scrollbar width.
+- name: widget.non-native-theme.scrollbar.size.override
   type: uint32_t
-#if defined(MOZ_WIDGET_GTK)
-  value: 12
-#elif defined(ANDROID)
-  value: 6
-#else
-  value: 17
-#endif
+  value: 0
   mirror: always
 
 # Whether the active thumb color should always use the themed colors, even if
