--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 prefs =
   plugin.load_flash_only=false
+  formhelper.autozoom.force-disable.test-only=true
 support-files =
   audio.ogg
   iframe_bug962251.html
