Bug 1740208 - Implement an EarlyHint listener r=necko-reviewers,kershaw
Differential Revision: https://phabricator.services.mozilla.com/D130729

UltraBlame original commit: 3d28e4c556d7ea946f8fb58de4bed548831245aa

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -605,3 +605,5 @@ run-sequentially = node server exceptions dont replay well
 [test_trr_enterprise_policy.js]
 firefox-appdir = browser # needed for resource:///modules/policies/schema.jsm to be registered
 skip-if = os == "android"
+[test_early_hint_listener.js]
+skip-if = socketprocess_networking
