Bug 1617611: Annotate each failing test individually. r=webdriver-reviewers,necko-reviewers,ckerschb,whimboo,valentin
Annotating each test individually lets us avoid introducing new failing tests
while we go through the backlog of failing tests.

Depends on D129162

Differential Revision: https://phabricator.services.mozilla.com/D129163

UltraBlame original commit: fdb2c6bfc0c6fc1d2511a5878ace937d397cfe61

--- a/toolkit/components/antitracking/test/browser/browser.ini
+++ b/toolkit/components/antitracking/test/browser/browser.ini
@@ -8,6 +8,8 @@ prefs =
   # Enable the window.open() heuristics globally in this directory
   privacy.restrict3rdpartystorage.heuristic.window_open=true
   privacy.restrict3rdpartystorage.heuristic.opened_window_after_interaction=true
+  # Bug 1617611: Fix all the tests broken by "cookies SameSite=lax by default"
+  network.cookie.sameSite.laxByDefault=false
 
 support-files =
   container.html
