Bug 1700398 - Part 1: Recover MRest. r=iain
Add recover support for `MRest`. When rest arguments are present, the `arguments`
object isn't mapped, so the rest array can be directly recovered from the frame.

Differential Revision: https://phabricator.services.mozilla.com/D130483

UltraBlame original commit: ed6099a0ae3cfe7dcf1278c5f1b667d4c214b88c

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -1887,6 +1887,7 @@
   result_type: Object
   possibly_calls: true
   alias_set: none
+  can_recover: true
 
 - name: PostWriteBarrier
   gen_boilerplate: false
