Bug 1700398 - Part 3: Support scalar replacement for rest arguments in construct calls. r=iain
Adds a copy of `ApplyArgs` to handle constructor calls. This new instruction is
then used to scalar replace rest arrays in `new` and `super` spread calls.

With this patch applied, we can scalar replace rest parameters in derived class
constructors:
```
class Derived extends Base {
  constructor(...args) {
    super(...args);
  }
}
```

Differential Revision: https://phabricator.services.mozilla.com/D130485

UltraBlame original commit: 547b8858819cee15531af7666faea7afee6962b5

--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -319,6 +319,9 @@
 - name: ApplyArray
   gen_boilerplate: false
 
+- name: ConstructArgs
+  gen_boilerplate: false
+
 - name: ConstructArray
   gen_boilerplate: false
 
