--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,7 @@ testing/raptor/.raptor-venv
 testing/raptor/raptor-venv
 testing/raptor/raptor/tests/json/
 testing/raptor/webext/raptor/auto_gen_test_config.js
+
+# Ignore ICU4X experimentation data files.
+# See intl/ICU4X.md for more details.
+config/external/icu4x
