--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -7023,6 +7023,12 @@
   value: false
   mirror: always
 
+# Whether we should avoid exposing styles of elements outside the flat tree in getComputedStyle().
+- name: layout.css.computed-style.styles-outside-flat-tree
+  type: bool
+  value: @IS_NOT_NIGHTLY_BUILD@
+  mirror: always
+
 # Are implicit tracks in computed grid templates serialized?
 - name: layout.css.serialize-grid-implicit-tracks
   type: RelaxedAtomicBool
