--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1108,7 +1108,7 @@
   mirror: always
 
 - name: browser.display.use_system_colors
-  type: bool
+  type: RelaxedAtomicBool
 #ifdef XP_WIN
   value: true
 #else
