--- a/testing/web-platform/meta/push-api/idlharness.https.any.js.ini
+++ b/testing/web-platform/meta/push-api/idlharness.https.any.js.ini
@@ -2,6 +2,9 @@
   [PushManager interface object length]
     expected: FAIL
 
+  [PushSubscription interface: attribute expirationTime]
+    expected: FAIL
+
   [PushSubscription interface object length]
     expected: FAIL
 
@@ -16,6 +19,9 @@
   [PushManager interface object length]
     expected: FAIL
 
+  [PushSubscription interface: attribute expirationTime]
+    expected: FAIL
+
   [PushSubscription interface object length]
     expected: FAIL
 
@@ -28,8 +34,11 @@
 
 [idlharness.https.any.serviceworker.html]
   expected:
-    if (os == "win") and debug and not webrender and (processor == "x86_64"): [OK, CRASH]
+    if (os == "win") and debug and not webrender and (processor == "x86_64"): ["OK", "CRASH"]
   [PushSubscriptionChangeEvent must be primary interface of new PushSubscriptionChangeEvent("pushsubscriptionchange")]
+    expected: FAIL
+
+  [PushSubscription interface: attribute expirationTime]
     expected: FAIL
 
   [PushSubscriptionChangeEvent interface object length]
@@ -82,6 +91,9 @@
   [PushManager interface object length]
     expected: FAIL
 
+  [PushSubscription interface: attribute expirationTime]
+    expected: FAIL
+
   [PushSubscription interface object length]
     expected: FAIL
 
@@ -90,3 +102,4 @@
 
   [PushManager interface: attribute supportedContentEncodings]
     expected: FAIL
+
