--- a/devtools/client/accessibility/test/browser/browser.ini
+++ b/devtools/client/accessibility/test/browser/browser.ini
@@ -37,6 +37,7 @@ fail-if = a11y_checks # bug 1687788 select accessible object button is not acces
 [browser_accessibility_sidebar.js]
 [browser_accessibility_simulation.js]
 skip-if = webrender # bug 1674060
+[browser_accessibility_tabbing_order_highlighter.js]
 [browser_accessibility_tree_audit_long.js]
 [browser_accessibility_tree_audit_reset.js]
 [browser_accessibility_tree_audit_toolbar.js]
