Bug 1732956 - Add facebook/reddit responsiveness tests. r=perftest-reviewers,kimberlythegeek
This patch adds 4 new interactive tests for facebook and reddit. The patch updates the recordings as well as needed. Furthermore, an update to the visualmetrics.py script is needed to handle a permafailure in the reddit-post tests. Note that the reddit-post test was split in 2 since they are quite large.

Differential Revision: https://phabricator.services.mozilla.com/D130665

UltraBlame original commit: 31353fc6ff8f891f3b8e9ad57d741efaa014137d

--- a/taskcluster/ci/test/browsertime-desktop.yml
+++ b/taskcluster/ci/test/browsertime-desktop.yml
@@ -120,6 +120,10 @@ browsertime-responsiveness:
     <<: *tp6-defaults
     raptor-subtests:
         - cnn-nav
+        - [facebook-nav, fbnav]
+        - [reddit-billgates-ama, rdt-ama]
+        - [reddit-billgates-post-1, rdt-post-1]
+        - [reddit-billgates-post-2, rdt-post-2]
     mozharness:
         extra-options:
             by-test-platform:
