Bug 1741585: Update more tests within toolkit/components/antitracking/test/ to work with https-first enabled r=timhuang
Differential Revision: https://phabricator.services.mozilla.com/D131332

UltraBlame original commit: c710535d18eca830985e58f536da52e86a28d429

--- a/toolkit/components/antitracking/test/browser/browser.ini
+++ b/toolkit/components/antitracking/test/browser/browser.ini
@@ -10,6 +10,8 @@ prefs =
   privacy.restrict3rdpartystorage.heuristic.opened_window_after_interaction=true
   # Bug 1617611: Fix all the tests broken by "cookies SameSite=lax by default"
   network.cookie.sameSite.laxByDefault=false
+  # Disable https-first because of explicit http/https testing
+  dom.security.https_first=false
 
 support-files =
   container.html
@@ -120,7 +122,6 @@ support-files = matchAll.js
 [browser_partitionedSharedWorkers.js]
 support-files = sharedWorker.js partitionedSharedWorker.js
 [browser_PBMCookieBehavior.js]
-https_first_disabled = true
 [browser_socialtracking.js]
 [browser_socialtracking_save_image.js]
 [browser_thirdPartyStorageRejectionForCORS.js]
@@ -179,4 +180,3 @@ support-files =
 support-files =
   clearSiteData.sjs
 [browser_AntiTrackingETPHeuristic.js]
-https_first_disabled = true
